# ce-claude-marketplace

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.md.ace-backup-20260210-193606  COMPLETE_REFACTOR_SUMMARY.md  DEBUG_MCP_NOT_APPEARING.md  INTEGRATION_READY.md  PUBLISHING_STRATEGY.md  QUICK_FIX_FOR_OTHER_SESSION.sh  README.md  READY_FOR_INTEGRATION.md  READY_TO_PUBLISH.md  TEST_ACE_LEARN.sh  cleanup_claude_flow.sh  walkthrough.md
.agent/: README.md
mcp-clients/ce-ai-ace-client/: .claude.json  .gitignore  .npmignore  .npmrc.example  .npmrc.github  API_ENDPOINT_FIXES.md  CHANGELOG.md  COPY_PASTE_FOR_CLIENT_CLAUDE.md  DISCOVERED_PATTERNS.md  FRESH_START_COMPLETE.md  IMPROVEMENTS.md  INSTALL.md  INTEGRATION_ISSUES.md  PUBLISHING.md  README.md  READ_ME_FIRST.md  REFACTOR_PLAN.md  SDK_UPGRADE.md  SERVER_READY_INSTRUCTIONS.md  TEST_RESULTS.md  VERIFICATION_COMPLETE.md  WHAT_TO_TEST_NOW.md  WHY_CLIENT_SIDE.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
mcp-clients/ce-ai-ace-client/ace_client/: __init__.py  __main__.py  client.py
mcp-clients/ce-ai-ace-client/ce_ai_ace_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp-clients/ce-ai-ace-client/docs/: AUTHENTICATION_AND_MULTI_TENANCY.md  CLIENT_IMPLEMENTATION_GUIDE.md  README.md  SERVER_VS_CLIENT_RESPONSIBILITIES.md
mcp-clients/ce-ai-ace-client/scripts/: fresh-start.ts  publish-github.sh  publish-npm.sh
mcp-clients/ce-ai-ace-client/src/: index.ts  index.ts.backup
mcp-clients/ce-ai-ace-client/tests/: README.md  integration-test.ts  verify-tool-description.ts
(+372 files in other folders)
