[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ce-ai-ace-client"
version = "2.5.0"
description = "Thin MCP client for ACE Pattern Learning (connects to remote server)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ACE Team", email = "ace@ce-dot-net.com"}
]
keywords = [
    "mcp",
    "claude-code",
    "ace",
    "pattern-learning",
    "client"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/ce-dot-net/ce-ai-ace"
Repository = "https://github.com/ce-dot-net/ce-ai-ace"
Documentation = "https://github.com/ce-dot-net/ce-ai-ace/blob/main/README.md"
"Bug Reports" = "https://github.com/ce-dot-net/ce-ai-ace/issues"

[project.scripts]
ce-ai-ace-client = "ace_client.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ace_client*"]

[tool.setuptools.package-data]
ace_client = ["py.typed"]
